[package]
name = "csgo_feeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-5 = "0.10"
base16ct = { version = "0.1.1", features= ["alloc"] }
reqwest = { version = "0.11", features = ["json", "blocking", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.5.1"
log = "0.4"
pretty_env_logger = "0.4"